--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": false,
   "scripts": {
     "start": "webpack --watch",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "lint": "eslint src/**/*.js --fix && prettier src/**/*.js --write"
   },
   "dependencies": {
     "@babel/core": "^7.6.4",
